[gd_scene load_steps=5 format=3 uid="uid://cclrqcxtnooiv"]

[ext_resource type="Theme" uid="uid://cpv3kem5xyfnc" path="res://componentes/interfaz/tema_interfaces.tres" id="1_crdog"]
[ext_resource type="FontFile" uid="uid://btf7wssbwspfr" path="res://recursos/Tipografias/friendly-monster/FriendlyMonster-lgr0X.otf" id="1_foqdn"]
[ext_resource type="Script" path="res://componentes/interfaz/perder/perder.gd" id="1_sobvn"]

[sub_resource type="LabelSettings" id="LabelSettings_cavfn"]
font = ExtResource("1_foqdn")
font_size = 20

[node name="Perder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_crdog")
script = ExtResource("1_sobvn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Has Perdido"
label_settings = SubResource("LabelSettings_cavfn")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Elegir Nivel" type="Button" parent="Panel/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Elegir Nivel"

[node name="Reintentar" type="Button" parent="Panel/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reintentar"

[node name="Salir al Menu Principal" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Salir al Menu Principal"

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/HBoxContainer/Elegir Nivel" to="." method="_on_elegir_nivel_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/HBoxContainer/Reintentar" to="." method="_on_reintentar_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Salir al Menu Principal" to="." method="_on_salir_al_menu_principal_pressed"]
